Fix layout break when searching pile

--- a/app/(core)/my-pile/page.module.scss
+++ b/app/(core)/my-pile/page.module.scss
@@ -2,4 +2,5 @@
   display: grid;
   height: 100%;
   grid-gap: 16px;
+  align-content: start;
 }
